rtg_tests/negative/unresolved_import/go.mod
module example.com/rtgtests/negative/unresolved

go 1.25
